# find-amazing-domains

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint-typecheck-test.yml
data/samples/: sample_en_5.txt  sample_es_5.txt
src/domainhack/: __init__.py
src/domainhack/adapters/: console_writer.py  file_word_source.py  tonic_registrar.py
src/domainhack/cli/: app.py
src/domainhack/domain/: entities.py
src/domainhack/ports/: registrar.py  result_writer.py  word_source.py
src/domainhack/usecases/: check_domains.py  filter_words.py  generate_range.py
tests/: conftest.py  test_check_domains.py  test_cli.py  test_cli_unit.py  test_console_writer.py  test_entities.py  test_file_word_source.py  test_filter_words.py  test_generate_range.py  test_integration.py  test_registrar_port.py  test_tonic_registrar.py
